css quick fix, z-index in progress page

--- a/src/pages/Setting/Setting.scss
+++ b/src/pages/Setting/Setting.scss
@@ -20,7 +20,7 @@
     left: 0;
     right: 0;
     height: 5%;
-    z-index: 999;
+    z-index: 1;
     text-transform: uppercase;
 }
 
